--- a/index.html
+++ b/index.html
@@ -56,6 +56,81 @@
     <div class="container mt-3">
         <div id="notification-area"></div>
     </div>
+
+    <!-- главный блок -->
+    <section class="bg-light py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1 class="display-4 fw-bold mb-4">Изучай языки вместе с нами!</h1>
+                    <p class="lead mb-4">Добро пожаловать! Посмотрите наши новые курсы, доступные в этом месяце!</p>
+                    <a href="#courses" class="btn btn-primary btn-lg">Посмотреть курсы</a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/eng.jpg" 
+                         alt="Изучение языков" class="img-fluid rounded shadow">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Блок с описанием  -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h2 class="mb-4">О нашей языковой школе</h2>
+                    <p class="fs-5">
+                        Наша миссия - обеспечить качественное образование для всех, кто заинтересован в изучении языков. 
+                        Мы предлагаем разнообразные курсы для всех уровней - от начального до продвинутого. 
+                        Наши опытные преподаватели и современные методы обучения помогут вам достичь ваших языковых целей.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- преимущества изучения языка с использованием Bootstrap Grid System -->
+    <section id="advantages" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Преимущества изучения новых языков</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card h-100 text-center border-0 shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-globe fs-1 text-primary"></i>
+                            </div>
+                            <h4 class="card-title">Международный язык</h4>
+                            <p class="card-text">Английский - самый распространенный язык в мире, используемый в бизнесе, науке и международном общении.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 text-center border-0 shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-book fs-1 text-primary"></i>
+                            </div>
+                            <h4 class="card-title">Богатая культура</h4>
+                            <p class="card-text">Понимайте литературу, музыку и фильмы в оригинале. Откройте для себя мир культурных сокровищ.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card h-100 text-center border-0 shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="bi bi-briefcase fs-1 text-primary"></i>
+                            </div>
+                            <h4 class="card-title">Карьерные возможности</h4>
+                            <p class="card-text">Откройте международные карьерные перспективы. Знание языков необходимо для многих высокооплачиваемых должностей.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
