--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
     </section>
 
-        <!-- блок с доступными курсами -->
+    <!-- блок с доступными курсами -->
     <section id="courses" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Предлагаемые курсы</h2>
@@ -272,7 +272,7 @@
         </div>
     </section>
 
-        <!-- футер -->
+    <!-- футер -->
     <footer id="contact" class="bg-dark text-white py-5">
         <div class="container">
             <div class="row">
@@ -307,6 +307,112 @@
             </div>
         </div>
     </footer>
+
+    <!-- модальное окно заявки -->
+    <div class="modal fade" id="orderModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Оформление заявки</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="order-form">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label class="form-label">Название курса</label>
+                                <input type="text" class="form-control" readonly>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Преподаватель</label>
+                                <input type="text" class="form-control" readonly>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Дата начала</label>
+                                <select class="form-select" id="start-date">
+                                    <option value="">Выберите дату</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Время занятия</label>
+                                <select class="form-select" id="start-time" disabled>
+                                    <option value="">Сначала выберите дату</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Продолжительность курса</label>
+                                <input type="text" class="form-control" readonly>
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Количество студентов</label>
+                                <input type="number" class="form-control" min="1" max="20" value="1">
+                            </div>
+                            <div class="col-12">
+                                <label class="form-label">Дополнительные опции</label>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="supplementary">
+                                            <label class="form-check-label" for="supplementary">
+                                                Дополнительные учебные материалы (+2000 руб./студент)
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="personalized">
+                                            <label class="form-check-label" for="personalized">
+                                                Индивидуальные занятия (+1500 руб./неделя)
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="excursions">
+                                            <label class="form-check-label" for="excursions">
+                                                Культурные экскурсии (+25%)
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="assessment">
+                                            <label class="form-check-label" for="assessment">
+                                                Оценка уровня языка (+300 руб.)
+                                            </label>
+                                        </div>
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="interactive">
+                                            <label class="form-check-label" for="interactive">
+                                                Интерактивная онлайн-платформа (+50%)
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="alert alert-info">
+                                    <h6>Автоматически применяемые скидки:</h6>
+                                    <div id="automatic-discounts">
+                                        <!-- здесь будут отображаться автоматические скидки -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Общая стоимость: <span id="total-cost">0</span> руб.</h5>
+                                        <button type="button" class="btn btn-secondary" id="calculate-cost">Рассчитать стоимость</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                    <button type="button" class="btn btn-primary" id="submit-order">Отправить заявку</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
